# coding

./: .gitignore  Dockerfile  LICENSE  README.md  git_sync_deps.py  sync_deps.py
agn/: CMakeLists.txt
agn/examples/: Examples.h  MainExamples.cpp
agn/include/: AudioArray.h  AudioBus.h  AudioFileReader.h  Macros.h
agn/include/core/: AudioBus.h  AudioChannel.h
agn/include/extended/: Logging.h
agn/src/: AudioFileReader.cpp
agn/src/core/: AudioBus.cpp  AudioChannel.cpp
agn/src/internal/: Assertions.h  VectorMath.h
agn/src/internal/src/: VectorMath.cpp
algs4/: .gitignore  BinarySearch.java  BinarySearchTree.java  BubbleSort.java  Date.java  HeapSort.java  InsertionSort.java  LinkedListBag.java  LinkedListQueue.java  LinkedListStack.java  MaxPriorityQueue.java  MergeSort.java  MinPriorityQueue.java  Point2D.java  PriorityElementary.java  Queue.java  QueueArray.java  QuickSort.java  QuickWithCutoff.java  QuickWithSentinels.java  README.md  RedBlackTree.java  ResizingArrayBag.java  ResizingArrayQueue.java  ResizingArrayStack.java  SelectionSort.java  SeqSearchSymbolTable.java  ShellSort.java  Stack.java  StackArray.java  SymbolTableSeqSearch.java  Vector.java  run.py
android/: .gitignore  README.md
android/Camera/app/: build.gradle
codec/: .gitignore  BitmapFormat.cpp  BitmapFormat.h  CMakeLists.txt  GifCodec.cpp  GifCodec.h  H264Codec.cpp  PBMFormat.cpp  PcmCodec.cpp  README.md  WavCodec.cpp  WavCodec.h  WavFormat.cpp  WavFormat.h  WebpCodec.cpp  run.py
codec/decoder_jpeg/: Cargo.toml
codec/decoder_jpeg/src/: decoder.rs  main.rs  marker.rs  parser.rs
codec/gif_decoder/: CMakeLists.txt  GifCodec.cpp  GifCodec.h  GifDecodeTest.cpp  GifImageReader.cpp  GifImageReader.h  Noncopyable.h
codec/image_decoders/: CMakeLists.txt  ImageDecoder.cpp  ImageDecoder.h  ImageDecodersTest.cpp
df/svg/: Cargo.toml
dfmt/json/: CMakeLists.txt
dfmt/svg/: Cargo.toml  run.py
dip/: README.md
dp/: README.md
dp/strategy/: Strategy.java
engine/: .gitignore  CMakeLists.txt
engine/include/: Data.h  Malloc.h  Math.h  NonCopyable.h  RefCnt.h  SafeMath.h  Sort.h  String.h  Types.h  WeakRefCnt.h
engine/src/: Data.cpp  String.cpp  Types.cpp
engine/test/: JsonTest.cpp  MathTest.cpp  RefCntTest.cpp  StdTest.cpp  StringTest.cpp  Test.cpp  VectorTest.cpp
ffmpeg/: .gitignore  CMakeLists.txt  DecodeAudio.cpp  DecodeVideo.cpp  DemuxDecode.cpp  Dranger.cpp  Dump.cpp  EncodeAudio.cpp  EncodeVideo.cpp  FFPlay.cpp  FFPlayer.cpp  FFmpegUtils.cpp  FilteringAudio.cpp  FilteringVideo.cpp  Metadata.cpp  Muxing.cpp  README.md  RGBA2Video.cpp  Remuxing.cpp  ScaleVideo.cpp  TranscodeAAC.cpp  conanfile.py  run.py
harun/: .gitignore  README.md  auto_run.py  hand_run.py  single_swipe.py
harun/src/: app.py  checkin.py  info.py  input.py  phone.py  schedule.py  sign.py  utils.py
iview/: README.md
lang/: README.md
lang/cpp_contructor/: .gitignore  CMakeLists.txt  CopyAssignment.cpp  CopyConstructor.cpp  DefaultConstructor.cpp  Memory.cpp  MoveConstructor.cpp  README.md  RValueRef.cpp  run.py
lang/cpp_thread/: .gitignore  AccessLocalVariable.cpp  AccumulateParallel.cpp  CMakeLists.txt  DetachThread.cpp  HelloConcurrent.cpp  PassReference.cpp  ProtectMutex.cpp  RAII.cpp  README.md  ReturnThread.cpp  ScopedThread.cpp  VectorThread.cpp  WaitingThreadFinish.cpp  run.py
math/: README.md
opencv/: .gitignore  BlendImage.cpp  BlendMode.cpp  CMakeLists.txt  ContrastBright.cpp  DisplayImage.cpp  DrawContours.cpp  ImageEnhance.cpp  MergeImage.cpp  README.md  ScaleImage.cpp  run.py
opengl/: .gitignore  CMakeLists.txt  Camera.h  CameraView.cpp  ColorTriangle.cpp  CoordinateSystem.cpp  Cuboid.cpp  Cuboid.h  DrawCircle.cpp  DrawSphere.cpp  HelloRectangle.cpp  HelloTexture.cpp  HelloTransform.cpp  HelloTriangle.cpp  HelloWindow.cpp  LightSpecular.cpp  README.md  Shader.h  Sphere.cpp  Sphere.h  TwoTriangle.cpp  Utils.cpp  Utils.h  run.py
opengl/glad/: glad.c  glad.h
res/: f32le-2-44100.pcm  int-allow-list.txt
sdsa/: .gitignore  ArrayIntroduction.java  ArrayRotate.java  ArraySearch.java  GCD.java  HelloWorld.java  IntroductionArray.java  README.md  run.py
sdsa/ads/: TrieTree.java
sdsa/array/: ArrayCopy.java  ArrayInJava.java  ArrayIntroduction.java  ArrayReverse.java  ArrayRightRotate.java  ArrayRotate.java  ArraySearch.java  GCD.java  HelloWorld.java  Student.java
sdsa/backtracking/: BackTracking.java  EightQueues.java
sdsa/binarytree/: BinarySearchTree.java  BinaryTree.java  BinaryTreeInsert.java  BinaryTreeIntro.java  BinaryTreeTraversal.java
sdsa/divideconquer/: DivideConquer.java  MergeSort.java
sdsa/dynamic/: DynamicProgram.java
sdsa/graph/: GraphRepresent.java
sdsa/greedy/: HuffmanCoding.java
sdsa/hashing/: HashMap.java
sdsa/heap/: EmptyHeapException.java  HeapInterface.java  HeapNode.java  MinHeap.java
sdsa/linkedlist/: CircularLinkedList.java  DoubleLinkedList.java  DoubleListDeleted.java  IsCircularList.java  SinglyLinkedList.java  SinglyLinkedListDeleted.java  SinglyLinkedListInserted.java  SinglyListLength.java
sdsa/matrix/: MatrixRotate.java
sdsa/python/: simple_heap.py
sdsa/queue/: ArrayQueue.java  LinkedListQueue.java
sdsa/stack/: ArrayQueue.java  ArrayStack.java  LinkedListArray.java
sfml/: .gitignore  Audio.h  CMakeLists.txt  README.md  Sound.cpp
sfml/cmake/: Config.cmake  Macro.cmake
sfml/include/audio/: AlResource.h  AudioDevice.h  SoundBuffer.h
sfml/include/system/: Lock.h  Mutex.h  MutexImpl.h  NonCopyable.h
sfml/src/: CMakeLists.txt
sfml/src/audio/: AlResource.cpp  AudioDevice.cpp  CMakeLists.txt
sfml/src/system/: Lock.cpp  Mutex.cpp  MutexImpl.cpp
sfml/test/: LockTest.cpp
svg2gif/: .gitignore  Cargo.toml  README.md  ffmpeg.diff  run.py
svg2gif/src/: app.rs  context.rs  decode.rs  encode.rs  main.rs  utils.rs
svg2gif/src/learn/: aliasing.rs  borrowing.rs  mod.rs  mutability.rs  mutable.rs  ownership.rs  raii.rs  ref_pattern.rs  traits.rs
tools/: CMakeLists.txt  DAILY.md
tools/command/: .gitignore  CMakeLists.txt  CommandLineFlags.cpp  CommandLineFlags.h  CommandTest.cpp  Sort.h  run.py
tools/skia/: conanfile.py
(+65 files in other folders)
