cmake_minimum_required(VERSION 3.15)

project(CodecTutorials)

add_executable(PBMFormat PBMFormat.cpp)

add_executable(BitmapFormat BitmapFormat.cpp)

add_executable(WavCodec WavCodec.cpp)

add_executable(GifCodec GifCodec.cpp)

add_executable(Mp3Codec Mp3Codec.cpp)

add_executable(H264Codec H264Codec.cpp)

add_executable(Webp2Png Webp2Png.cpp)

